// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminGuesser /> renders loading 1`] = `<Loading />`;

exports[`<AdminGuesser /> renders with admin element 1`] = `
<ErrorBoundary
  fallbackRender={[Function]}
  onError={[Function]}
>
  <AdminGuesser
    admin={[Function]}
    dataProvider={
      {
        "create": [Function],
        "delete": [Function],
        "deleteMany": [Function],
        "getList": [Function],
        "getMany": [Function],
        "getManyReference": [Function],
        "getOne": [Function],
        "introspect": [Function],
        "subscribe": [Function],
        "unsubscribe": [Function],
        "update": [Function],
        "updateMany": [Function],
      }
    }
    i18nProvider={
      {
        "changeLocale": [Function],
        "getLocale": [Function],
        "getLocales": [Function],
        "translate": [Function],
      }
    }
    schemaAnalyzer={
      {
        "getFieldNameFromSchema": [Function],
        "getFieldType": [Function],
        "getFiltersParametersFromSchema": [Function],
        "getOrderParametersFromSchema": [Function],
        "getSubmissionErrors": [Function],
      }
    }
    theme={
      {
        "components": {
          "MuiAutocomplete": {
            "variants": [
              {
                "props": {},
                "style": [Function],
              },
            ],
          },
          "MuiFilledInput": {
            "styleOverrides": {
              "root": {
                "&$disabled": {
                  "backgroundColor": "rgba(0, 0, 0, 0.04)",
                },
                "backgroundColor": "rgba(0, 0, 0, 0.04)",
              },
            },
          },
          "MuiFormControl": {
            "defaultProps": {
              "margin": "dense",
              "size": "small",
              "variant": "filled",
            },
          },
          "MuiTextField": {
            "defaultProps": {
              "margin": "dense",
              "size": "small",
              "variant": "filled",
            },
            "variants": [
              {
                "props": {},
                "style": [Function],
              },
            ],
          },
          "RaMenuItemLink": {
            "styleOverrides": {
              "root": {
                "&.RaMenuItemLink-active": {
                  "borderLeft": "3px solid #38a9b4",
                },
                "borderLeft": "3px solid #fff",
              },
            },
          },
        },
        "palette": {
          "background": {
            "default": "#fafafb",
          },
          "mode": "light",
          "primary": {
            "contrastText": "#ffffff",
            "dark": "#006a75",
            "light": "#74dde7",
            "main": "#38a9b4",
          },
          "secondary": {
            "contrastText": "#fff",
            "dark": "#0069c0",
            "light": "#6ec6ff",
            "main": "#288690",
          },
        },
        "sidebar": {
          "closedWidth": 50,
          "width": 240,
        },
        "typography": {
          "h6": {
            "fontWeight": 400,
          },
        },
      }
    }
  />
</ErrorBoundary>
`;

exports[`<AdminGuesser /> renders with custom resources 1`] = `
<AdminUI
  dataProvider={
    {
      "create": [Function],
      "delete": [Function],
      "deleteMany": [Function],
      "getList": [Function],
      "getMany": [Function],
      "getManyReference": [Function],
      "getOne": [Function],
      "introspect": [Function],
      "subscribe": [Function],
      "unsubscribe": [Function],
      "update": [Function],
      "updateMany": [Function],
    }
  }
  loading={[Function]}
>
  <ResourceGuesser
    name="custom"
  />
</AdminUI>
`;

exports[`<AdminGuesser /> renders without custom resources 1`] = `
<AdminUI
  dataProvider={
    {
      "create": [Function],
      "delete": [Function],
      "deleteMany": [Function],
      "getList": [Function],
      "getMany": [Function],
      "getManyReference": [Function],
      "getOne": [Function],
      "introspect": [Function],
      "subscribe": [Function],
      "unsubscribe": [Function],
      "update": [Function],
      "updateMany": [Function],
    }
  }
  loading={[Function]}
>
  <ResourceGuesser
    name="books"
  />
</AdminUI>
`;

exports[`<AdminGuesser /> renders without data 1`] = `
<AdminUI
  dataProvider={
    {
      "create": [Function],
      "delete": [Function],
      "deleteMany": [Function],
      "getList": [Function],
      "getMany": [Function],
      "getManyReference": [Function],
      "getOne": [Function],
      "introspect": [Function],
      "subscribe": [Function],
      "unsubscribe": [Function],
      "update": [Function],
      "updateMany": [Function],
    }
  }
  loading={[Function]}
/>
`;
